--- a/app/settings/src/css/index.css
+++ b/app/settings/src/css/index.css
@@ -7,15 +7,6 @@ body {
 	animation: fadeEffect 1s;
 }
 
-.toggle:checked ~ .toggle-bg {
-	background-color: black !important;
-	transition: 0.2s ease-in;
-}
-
-.toggle:checked {
-	right: 4px !important;
-}
-
-input[type="text"] {
-	width: 260px !important;
+.custom-titlebar-container {
+	overflow: hidden !important;
 }
