--- a/styles/partials/layout/titlebar.scss
+++ b/styles/partials/layout/titlebar.scss
@@ -11,9 +11,9 @@
 
 /* submenu */
 .custom-titlebar-submenu {
-	background-color: rgb(0, 0, 0) !important;
-	border: 1px solid rgb(40, 40, 40);
+	background-color: rgb(20, 20, 20) !important;
 	text-transform: capitalize !important;
+	border-radius: 10px;
 }
 
 /* separator */
@@ -21,4 +21,8 @@
 	margin: 8px 0px !important;
 	background-color: rgb(40, 40, 40) !important;
 	opacity: 1 !important;
+}
+
+.custom-titlebar-menu-item {
+	background-color: black !important;
 }
