Fix menubar rounded corners

--- a/styles/partials/layout/titlebar.scss
+++ b/styles/partials/layout/titlebar.scss
@@ -11,9 +11,11 @@
 
 /* submenu */
 .custom-titlebar-submenu {
-	background-color: rgb(20, 20, 20) !important;
+	background-color: #191919 !important;
 	text-transform: capitalize !important;
-	border-radius: 10px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
 /* separator */
@@ -21,8 +23,4 @@
 	margin: 8px 0px !important;
 	background-color: rgb(40, 40, 40) !important;
 	opacity: 1 !important;
-}
-
-.custom-titlebar-menu-item {
-	background-color: black !important;
 }
