--- a/styles/partials/layout/layout.scss
+++ b/styles/partials/layout/layout.scss
@@ -2,7 +2,7 @@
 *,
 ::before,
 ::after {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: system-ui, Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
 	outline: none;
