--- a/styles/partials/layout/titlebar.scss
+++ b/styles/partials/layout/titlebar.scss
@@ -1,7 +1,7 @@
 /* titlebar */
 .custom-titlebar {
-	font-family: Arial, Helvetica, sans-serif;
 	color: white !important;
+	font-weight: 500 !important;
 }
 
 /* controls */
