--- a/styles/tailwind.scss
+++ b/styles/tailwind.scss
@@ -34,6 +34,10 @@
 	.summary {
 		@apply cursor-pointer font-bold;
 	}
+
+	.tooltip {
+		@apply invisible absolute -mt-6 rounded-xl bg-white p-2 text-black;
+	}
 }
 
 @layer base {
