--- a/styles/partials/components/components.scss
+++ b/styles/partials/components/components.scss
@@ -44,6 +44,26 @@
 	stroke: white;
 }
 
+.input:hover ~ #show_pass_2 {
+	transition: 0.2s ease-in;
+	stroke: white;
+}
+
+.input:hover ~ #show_pass_21 {
+	transition: 0.2s ease-in;
+	stroke: white;
+}
+
+.input:hover ~ #show_pass_3 {
+	transition: 0.2s ease-in;
+	stroke: white;
+}
+
+.input:hover ~ #show_pass_31 {
+	transition: 0.2s ease-in;
+	stroke: white;
+}
+
 /* button */
 .buttoni > svg {
 	position: relative;
@@ -63,4 +83,39 @@
 .buttonmselected {
 	background-color: rgb(30, 30, 30) !important;
 	border-color: rgb(30, 30, 30) !important;
+}
+
+/* dialog */
+.dialog {
+	text-align: center;
+	background-color: #191919 !important;
+	color: white;
+	padding: 3rem;
+	border-radius: 15px;
+	margin: auto;
+
+	& > * {
+		margin: 0 0 0.5rem 0;
+	}
+}
+
+.dialog::backdrop {
+	background: rgb(0 0 0 / 0.9);
+}
+
+dialog[open] {
+	animation: fadeEffect 0.5s;
+}
+
+/* tooltip */
+.tooltipContainer:hover .tooltip {
+	animation: fadeEffect 0.5s;
+	visibility: visible;
+	z-index: 50;
+}
+
+.tooltipContainer > svg {
+	animation: fadeEffect 0.5s;
+	position: relative;
+	top: 1rem;
 }
