--- a/styles/partials/layout/titlebar.scss
+++ b/styles/partials/layout/titlebar.scss
@@ -1,7 +1,7 @@
 /* titlebar */
 .custom-titlebar {
-	font-family: Arial, Helvetica, sans-serif;
 	color: white !important;
+	font-weight: 500 !important;
 }
 
 /* controls */
@@ -11,9 +11,11 @@
 
 /* submenu */
 .custom-titlebar-submenu {
-	background-color: rgb(0, 0, 0) !important;
-	border: 1px solid rgb(40, 40, 40);
+	background-color: #191919 !important;
 	text-transform: capitalize !important;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
 /* separator */
