Enable manual import #204

--- a/styles/partials/components/components.scss
+++ b/styles/partials/components/components.scss
@@ -64,6 +64,11 @@
 	stroke: white;
 }
 
+.input::placeholder {
+	color: gray;
+	font-weight: normal;
+}
+
 /* button */
 .buttoni > svg {
 	position: relative;
