--- a/styles/index.css
+++ b/styles/index.css
@@ -38,6 +38,10 @@
 	.tooltip {
 		@apply invisible absolute -mt-6 rounded-xl bg-white p-2 text-black;
 	}
+
+	.dialog {
+		@apply m-auto rounded-2xl bg-gray-700 p-12 text-center text-white;
+	}
 }
 
 @layer base {
